@@ -13,6 +13,9 @@ Build-Depends:
  cpio <!stage1>,
 # used by upstream to compress kernel and by debian/rules.real to build linux-source
  xz-utils <!stage1>,
+# used by debian/rules.real to build linux-perf and linux-support
+ dh-python <!stage1>,
+Build-Depends-Arch:
 # used by debian/rules.real to build udebs
  kernel-wedge (>= 2.93~) <!stage1>,
 # used by kernel-wedge (only on Linux, thus not declared as a dependency)
@@ -55,8 +58,6 @@ Build-Depends:
  rsync <!stage1 !pkg.linux.notools>,
 # used by upstream to build cpupower
  libpci-dev <!stage1 !pkg.linux.notools>,
-# used by debian/rules.real to build linux-perf and linux-support
- dh-python <!stage1>,
 Build-Depends-Indep:
 # used by debian/rules.real to build linux-source
  patchutils <!stage1>,
