@@ -24,6 +24,7 @@ linux (4.13.4-1~exp1) UNRELEASED; urgency=medium
     - Change all binary packages with priority: extra to priority: optional
     - Install copyright file (and some other documentation) when the nodoc
       profile is used
+  * debian/control: Move many build dependencies to Build-Depends-Arch field
 
   [ Uwe Kleine-König ]
   * [arm64] really enable NET_DSA_MV88E6XXX for Espressobin
